--- a/src/site/xhtml/sps.xhtml
+++ b/src/site/xhtml/sps.xhtml
@@ -141,7 +141,7 @@
       <li>Execute <code>mvn -P release package</code> to generate and sign the standard release artfiacts, as well as creating independently package installable release artifacts.</li>
     </ol>
   <h2>Release procedure</h2>
-  <p>When wishing to deploy a release, the following steps should be followed:</p>
+  <p>To deploy a release, the following steps should be followed:</p>
   <ol>
     <li>Update <code>/src/changes/changes.xml</code> by doing the following:
       <ol>
